--- a/MQTT/SmartSensorsSimple/broker/package.json
+++ b/MQTT/SmartSensorsSimple/broker/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "Mosca",
-    "version": "1.0.0",
-    "description": "Mosca",
-    "private": true,
-    "dependencies": {
-      "mosca": "^2.5.1"
-    },
-    "devDependencies": {},
-    "scripts": {
-      "start": "node ./server",
-      "preinstall": "npm cache clear",
-      "postinstall": "bower install"
-    }
+  "name": "Mosca",
+  "version": "1.0.0",
+  "description": "Mosca",
+  "private": true,
+  "dependencies": {
+    "mosca": "^2.7.0",
+    "socket.io": "^2.0.4"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node ./server",
+    "preinstall": "npm cache clear",
+    "postinstall": "bower install"
   }
-  
+}
